week 2 GWC newsletter

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -170,6 +170,186 @@
                 </section>
         <!-- end news section -->
 
+        <section id="week2" class="news bg-white">
+                <div class="container">
+                    <div class="headline text-center">
+                        <div class="row">
+                            <div class="col-md-10 col-md-offset-1 text-center">
+                                <h2 class="section-title">Week 2</h2> <!-- begin week 2 summary -->
+                                <h4 class="section-title">Coding is Cool!</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <p>
+                        We were so excited to see all of your students’ enthusiasm as we wrapped up Week 2 of our Spring 
+                        2022 Spartan Girls Who Code Program! This week, we learned how to format text and insert links on our webpages!
+                    </p>
+                    <p>
+                        Before we dive into a full recap of Saturday's meeting, we'd like to share a few announcements.
+                    </p>
+                    <h4 class="text-center">Announcements</h4>
+                    <ul>
+                        <h4>1. Bonus Hour</h4>
+                        <p>
+                            Bonus Hours will continue throughout the program on <b>Thursday's from 7:00-8:00p ET</b> and is open to all SGWC participants. SGWC mentors will be available on Zoom during 
+                            the bonus hour to resolve technical difficulties, dive deeper into the coding concepts we've learned, or talk about computer science in general!
+                        </p>
+                        <p>
+                            Use the Zoom link below to join us for a bonus hour of fun each week.
+                            The password for our bonus hour will always be the same as the password from the
+                            previous Saturday's meeting (sent via email only).
+                        </p>
+                        <ul>
+                            <li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/92450527619">https://msu.zoom.us/j/92450527619</a> (password is same as the one for your Cohort Zoom)</li>
+                        </ul>
+                        <h4>2. Girls Who Code Summer Programs</h4>
+                        <p>
+                            The national organization of Girls Who Code is offering <b>free</b>, virtual summer opportunities for high school students from
+                            <b>June 17 - August 12</b>, and the application is <a href="https://girlswhocodesm.smapply.io/?utm_source=Domestic+Campaign+Monitor&utm_medium=Campaign+Monitor&utm_campaign=Campaign+Monitor+2022">OPEN.</a>
+                        </p>
+                        <p>
+                            The <b>Summer Immersion Program (SIP)</b> is a live, virtual, 2-week intro computer science course for 9th-11th graders. You will learn
+                            HTML, CSS, and JavaScript while getting an inside look into the tech industry through company sponsors.
+                        </p>
+                        <p>
+                            The <b>Self-Paced Program</b> is a flexible computer science course for 9th-12th graders who prefer not to adhere to a strict schedule.
+                            Participants can choose to earn beginner-level badges in HTML, CSS, and JavaScript (for web development) or an intermediate-level badge in
+                            Python (for cybersecurity). Students will also have the chance to build a community through weekly sessions and Girls Who Code activities.
+                        </p>
+                        <p>
+                            If you are interested, the application linked above only takes about 15-20 minutes to complete, and doesn't require GPA, transcripts,
+                            or recommendations!
+                        </p>
+                        <h4>3. Looking Ahead</h4>
+                        <p>
+                            We'll see you again this Saturday, 2/5 at 10a ET for our third SGWC meeting of the spring, 
+                            where we will review last week's material and begin learning about images in webpages!
+                        </p>
+                        <h4>4. Questions?</h4>
+                        <p>
+                            As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                        </p>
+                    </ul>
+                    <h4 class="text-center">Meeting Recap</h4>
+                    <p>
+                        To start off this week, we did a fun “Show and Tell” icebreaker, where students shared some of their favorite keepsakes – we
+                         saw some awesome instruments, books, collections, and even met some adorable pets! Ask your student what they shared!
+                    </p>
+                    <p>
+                        After our ice breaker, we went directly to our spotlight, where our students saw a preview of all that's possible in the 
+                        wide world of computer science through this week's spotlight video. Interviews with Bill Gates, Will. I. Am., Mark Zuckerberg, 
+                        and others underscored the importance of learning to code in the year 2022!
+                    </p>
+                    <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                        <div class="row">
+                            <div class="col-md-12" align="middle">
+                                <iframe allowfullscreen width="400" height="350" src="https://www.youtube.com/embed/nKIu9yen5nc"></iframe>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <p><i>Hear for yourselves what computer science can accomplish!</i></p>
+                        </div>
+                    </div>
+                    <p>
+                        Once our students finished sharing their amazing ideas for some future coding projects,
+                         we jumped right into a quick <b>Kahoot!</b> review of last week’s content!
+                    </p>
+                    <p>
+                        After that, we continued with the HTML lessons that our students started last week on 
+                        <a href="https://codehs.com">CodeHS</a> where they learned many different ways to format text and how to 
+                         insert on their websites. 
+                    </p>
+                    <p>
+                        We ended things with small mentor-student group discussions, reflecting on what went well, what was challenging, 
+                        and what students are looking forward to at next Saturday's session. 
+                        Responses to our weekly feedback survey were again quite positive, but don't hesitate to reach out 
+                        to info@spartangwc.org if you have any questions or concerns!
+                    </p>
+                    <h4 class="text-center">Mentor Spotlight</h4>
+                    <p>
+                        SGWC is led, organized, and run by MSU students with the help of <a href="https://www.egr.msu.edu/people/profile/iselava1">Teresa Isela Vandersloot</a>,
+                        <a href="https://www.egr.msu.edu/people/profile/ldillon">Dr. Laura Dillon</a> and <a href="https://www.egr.msu.edu/people/profile/wulfekuh">Dr. Marilyn Wulfekulher</a>,
+                        and we thought it would be fun to
+                        introduce a few of our <a href="contact.html#team">team members</a> each week.
+                    </p>
+                    <p>
+                        Continuing our mentor spotlight series, we are highlighting our Navy Cohort Leads this week!
+                    </p>
+
+                    <!-- mentor photos -->
+                    <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                        <div class="row">
+                            <div class="col-md-6" align="middle">
+                                <img class="shadow-lg" src="assets/img/ss22photos/team/Clark_Anna_headshot750_1000.jpg" height="350">
+                                <br><br>
+                                <p><i>Anna Clark</i></p>
+                            </div>
+                            <div class="col-md-6" align="middle">
+                                <img class="shadow-lg" src="assets/img/ss22photos/team/NajihaJaigirdar750x1000_72R.jpeg" height="350">
+                                <br><br>
+                                <p><i>Najiha Jaigirdar</i></p>
+                            </div>
+                        </div>
+                        <!-- mentor QA -->
+                        <div class="row">
+                            <div class="col-md-6" align="left"> <!-- Anna -->
+                                <p>
+                                    <b>What are you studying?</b><br>
+                                    I am a second-year majoring in Computational Data Science and Mathematics!
+                                </p>
+                                <p>
+                                    <b>How did you become interested in computer science?</b><br>
+                                    I became interested in Computer Science through my high school robotics team.
+                                </p>
+                                <p>
+                                    <b>What's something cool you've done with computer science?</b><br>
+                                    For a class project, I have made card games like solitaire!
+                                </p>
+                                <p>
+                                    <b>What are you hoping to do with computer science in the future?</b><br>
+                                    I hope to work with cybersecurity and keep working with computer science outreach.
+                                </p>
+                                <p>
+                                    <b>What advice do you have for our students?</b><br>
+                                    Don’t be afraid to ask any questions… everyone here is trying to help you achieve your goals!
+                                </p>
+                            </div>
+                            <div class="col-md-6" align="left"> <!-- Najiha -->
+                                <p>
+                                    <b>What are you studying?</b><br>
+                                    I am a second-year majoring in Computer Engineering with a minor in Graphic Design!
+                                </p>
+                                <p>
+                                    <b>How did you become interested in computer science?</b><br>
+                                    I participated in a girls who code club when I was in high school.
+                                </p>
+                                <p>
+                                    <b>What's something cool you've done with computer science?</b><br>
+                                    For a class project, I coded a cryptocurrency market.
+                                </p>
+                                <p>
+                                    <b>What are you hoping to do with computer science in the future?</b><br>
+                                    I hope to keep getting better at coding and be able to teach more people.
+                                </p>
+                                <p>
+                                    <b>What advice do you have for our students?</b><br>
+                                    Being a lifelong learner is one of the most fulfilling identities you could possibly have.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <p>
+                        Looking forward to seeing everyone again this Saturday! :)
+                    </p>
+                    <p>
+                        -The SGWC Team
+                    </p>
+
+
+                    </div>
+                </section> <!-- end week 1 summary -->
+
          <section id="week1" class="news bg-white">
                 <div class="container">
                     <div class="headline text-center">
