update Oyendrila year

--- a/spartangwc/contact.html
+++ b/spartangwc/contact.html
@@ -497,7 +497,7 @@
                                         <div class="team-member-description">
                                             <div class="team-member-about">
                                                 <h4>Oyendrila Dobe</h4>
-                                                <p>Junior<br>Computer Science</p>
+                                                <p>Graduate Student<br>Computer Science</p>
                                             </div>
                                         </div> <!-- end of /.team-member-description -->
                                     </div> <!-- end of /.team-member-box -->
