--- a/belizeweb/resources.html
+++ b/belizeweb/resources.html
@@ -79,7 +79,13 @@
 										<a href="https://docs.google.com/presentation/d/1eCBLqWCyg92vS60l4BKC7sb4Vme-ipWRfSlSpBM3mKs/edit?usp=sharing" target="_blank">06 - Functions - 1.29.22</a>
 									</li>
 									<li style="list-style: disc;">
-										<a href="https://docs.google.com/presentation/d/15BlVA_4NjVOx2Clf-itxksT4qziKFW7g5xoPTo6Q_4M/edit?usp=sharing" target="_blank">07 - Functions Review - 1.31.22</a>
+										<a href="https://docs.google.com/presentation/d/15BlVA_4NjVOx2Clf-itxksT4qziKFW7g5xoPTo6Q_4M/edit?usp=sharing" target="_blank">07 - Functions Review - 2.1.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1Q2KIen6NPVanbg11CNILHFOEiTiSK2_XhF6rTgR8cFY/edit?usp=sharing" target="_blank">08 - Functions Review 2 - 2.5.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/17OAwifnEn1ItIULt0YlaFiH0oVVOlws7lYxPzqDZ9Y0/edit?usp=sharing" target="_blank">09 - Variables, Input, Parameters - 2.8.22</a>
 									</li>
 								</ul>
 							</section>
