--- a/belizeweb/news.html
+++ b/belizeweb/news.html
@@ -168,7 +168,7 @@
 										<br>
 									</div>
 									<p>
-										Meeting 1 included a Zoom orientation and program overview; Meetings 2 and 3 introduced Python and basic commands to control Tracy the Turtle; Meetings 4 and 5 introduced for loops to simplify our code; Meetings 6 and 7 introduced loops and functions; And Meetings 8 and 9 included a functions review and introduced variables, inputs and parameters!
+										<b>Meeting 1</b> included a Zoom orientation and program overview; <b>Meetings 2 and 3</b> introduced Python and basic commands to control Tracy the Turtle; <b>Meetings 4 and 5</b> introduced for loops to simplify our code; <b>Meetings 6 and 7</b> introduced loops and functions; And <b>Meetings 8 and 9</b> included a functions review and introduced variables, inputs and parameters!
 									</p>
 									<div align="middle" class="col-md-12">
 										<div class="row">
