--- a/belizeweb/news.html
+++ b/belizeweb/news.html
@@ -134,7 +134,7 @@
 									<p>
 										We had the honor of having our amazing live spotlight <b>Sonia Ceballos!</b>. Sonia Ceballos is an electronic and telecommunications engineer with 23 years of experience. With a passion for technology and readership; making the impossible-possible. Currently the General manager of <a href="http://www.socias.bz/">Socias. Digital transformation firm</a> 
 									</p>
-									<span class="image main"><img src="images/news_3/2022-02-01__10_.png" alt="Photo Sonia Ceballos Live Spotlight!"></span>
+									<span class="image main"><img src="images/news_3/sonia.png" alt="Photo Sonia Ceballos Live Spotlight!"></span>
 									<p>
 										One of our icebreakers included the students making their own <b>Digital Art!</b> Kudos to the students for their creativity!
 									</p>
