added mentor spotlight for week4

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -170,6 +170,196 @@
                 </section>
         <!-- end news section -->
 
+        <section id="week4" class="news bg-white">
+            <div class="container">
+                <div class="headline text-center">
+                    <div class="row">
+                        <div class="col-md-10 col-md-offset-1 text-center">
+                            <h2 class="section-title">Week 4</h2> <!-- begin week 4 summary -->
+                            <h4 class="section-title">Creativity in Coding!</h4>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We were so excited to see all of your students’ enthusiasm as we wrapped up Week 4 of our 
+                    Spring 2022 Spartan Girls Who Code Program! This week, we learned about copyright and how to format 
+                    and insert images on our webpages!
+                </p>
+                <p>
+                    Before we dive into a full recap of Saturday's meeting, we'd like to share a few announcements.
+                </p>
+                <h4 class="text-center">Announcements</h4>
+                <ul>
+                    <h4>1. Bonus Hour</h4>
+                    <p>
+                        This week's Bonus Hour will take place Thursday, 2/10 from 7:00-8:00p ET and is open to all SGWC participants. 
+                        SGWC mentors will be available on Zoom during the bonus hour to resolve technical difficulties, dive deeper into the 
+                        coding concepts we've learned, or talk about computer science in general!
+                    </p>
+                    <p>
+                        Use the Zoom link below to join us for a bonus hour of fun each week.
+                        The password for our bonus hour will always be the same as the password from the
+                        previous Saturday's meeting (sent via email only).
+                    </p>
+                    <ul>
+                        <li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/92450527619">https://msu.zoom.us/j/92450527619</a> (password is same as the one for your Cohort Zoom)</li>
+                    </ul>
+                    <h4>2. Feedback</h4>
+                    <p>
+                        Us mentors are paying attention! This past week, we have left feedback for each one of our students. 
+                        If you would like to see it, you can find that in CodeHS under one of your assignments! 
+                        The assignment button will be colored pink or dark blue. 
+                    </p>
+                    <h4>3. Introduce a Girl to Engineering Day</h4>
+                    <p>
+                        Curious what STEM is all about beyond the classroom? Interested in how science, technology, engineering and 
+                        mathematics can be used to solve problems and make our world a better place? Join us for the 7th annual Introduce a 
+                        Girl to Engineering Day: Home Edition hosted by MSU's College of Engineering on <b>Saturday, 2/26 from 1:30-3:30p ET</b>! 
+                        Registration is free to 4th-8th grade students, and closes on 2/11—more information about the program can be found 
+                        at the <a href = "https://www.egr.msu.edu/wie/form/introduce-girl-engineering">registration link</a>.
+                    </p>
+                    <h4>4. Girls Who Code Summer Programs</h4>
+                    <p>
+                        The national organization of Girls Who Code is offering <b>free</b>, virtual summer opportunities for high school students from
+                        <b>June 17 - August 12</b>, and the application is <a href="https://girlswhocodesm.smapply.io/?utm_source=Domestic+Campaign+Monitor&utm_medium=Campaign+Monitor&utm_campaign=Campaign+Monitor+2022">OPEN.</a>
+                    </p>
+                    <p>
+                        The <b>Summer Immersion Program (SIP)</b> is a live, virtual, 2-week intro computer science course for 9th-11th graders. You will learn
+                        HTML, CSS, and JavaScript while getting an inside look into the tech industry through company sponsors.
+                    </p>
+                    <p>
+                        The <b>Self-Paced Program</b> is a flexible computer science course for 9th-12th graders who prefer not to adhere to a strict schedule.
+                        Participants can choose to earn beginner-level badges in HTML, CSS, and JavaScript (for web development) or an intermediate-level badge in
+                        Python (for cybersecurity). Students will also have the chance to build a community through weekly sessions and Girls Who Code activities.
+                    </p>
+                    <p>
+                        If you are interested, the application linked above only takes about 15-20 minutes to complete, and doesn't require GPA, transcripts,
+                        or recommendations!
+                    </p>
+                    <h4>5. Looking Ahead</h4>
+                    <p>
+                        We'll see you again this Saturday, 2/12 at 10a ET for our fourth SGWC meeting of the spring, where we will be reviewing 
+                        all that we’ve learned so far!
+                    </p>
+                    <h4>6. Questions?</h4>
+                    <p>
+                        As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                    </p>
+                </ul>
+                <h4 class="text-center">Meeting Recap</h4>
+                <p>
+                    To start off this week, we did an icebreaker where students shared their favorite part of their week – we heard that a 
+                    lot of students had snow days over the snowstorm during the later part of the week.
+                </p>
+                <p>
+                    After our ice breaker, we went directly to our spotlight, where our students saw a preview of two different careers 
+                    in the world of computer science. Interviews with Brina, a software engineer and Polina, a data scientist, that 
+                    explored how they were introduced to the world of computer science and what they do at their current job today.
+                </p>
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-6" align="middle">
+                            <iframe allowfullscreen width="400" height="350" src="https://www.youtube.com/embed/t0-Z_LfGwUM"></iframe>
+                        </div>
+                        <div class="col-md-6" align="middle">
+                            <iframe allowfullscreen width="400" height="350" src="https://www.youtube.com/embed/tTSEFaYjV30"></iframe>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <p><i>Watch these short videos to learn about two very different careers in computer science!</i></p>
+                    </div>
+                </div>
+                <p>
+                    Once our students finished sharing their thoughts on some different computer science careers, we jumped right into a quick 
+                    review of the last two weeks of content!
+                </p>
+                <p>
+                    After that, we continued with the HTML lessons that our students started last week on <a href = "https://codehs.com/">CodeHS</a>, 
+                    where they learned many different ways to format images and how to insert on their websites. They also learned the importance of copyright 
+                    protection and how to select images that were marked for reuse. A few of our students' creations are shown below. 
+                </p>
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="/Users/annaclark/Desktop/msu-cse-outreach.github.io/spartangwc/assets/img/ss22photos/week4/helen_work.png" height="350">
+                            <br><br>
+                            <p><i>Helen A.</i></p>
+                        </div>
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="/Users/annaclark/Desktop/msu-cse-outreach.github.io/spartangwc/assets/img/ss22photos/week4/zyphera_work.png" height="350">
+                            <br><br>
+                            <p><i>Zyphera K.</i></p>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <p><i>Two students showing off their favorite images in our "Make a Collage" exercise!</i></p>
+                    </div>
+                </div>
+                <p>
+                    We ended things with small mentor-student group discussions, reflecting on what went well, what was challenging, 
+                    and what students are looking forward to at next Saturday's session. 
+                    Responses to our weekly feedback survey were again quite positive, but don't hesitate to reach out to info@spartangwc.org 
+                    if you have any questions or concerns!
+                </p>
+                <h4 class="text-center">Mentor Spotlight</h4>
+                <p>
+                    SGWC is led, organized, and run by MSU students with the help of <a href="https://www.egr.msu.edu/people/profile/iselava1">Teresa Isela Vandersloot</a>,
+                    <a href="https://www.egr.msu.edu/people/profile/ldillon">Dr. Laura Dillon</a> and <a href="https://www.egr.msu.edu/people/profile/wulfekuh">Dr. Marilyn Wulfekulher</a>,
+                    and we thought it would be fun to
+                    introduce a few of our <a href="contact.html#team">team members</a> each week.
+                </p>
+                <p>
+                    Continuing our mentor spotlight series, we are highlighting one of our Black Cohort Leads this week!
+                </p>
+
+                <!-- mentor photos -->
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-4" align="middle">
+                            <img class="shadow-lg" src="/Users/annaclark/Desktop/msu-cse-outreach.github.io/spartangwc/assets/img/ss22photos/team/trinity750x1000_72R.jpg" height="350">
+                            <br><br>
+                            <p><i>Trinity Johnson</i></p>
+                        </div>
+                    </div>
+                    <!-- mentor QA -->
+                    <div class="row">
+                        <div class="col-md-4" align="left"> <!-- Sanju -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a second-year majoring in computer science and minoring in Japanese!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I've always been in love with everyday tech(phones, tablets, smart watches, etc.), and the thought of being able to help program one got me interested in computer science.
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I went to a hackathon last year where my group and I created a random movie generator.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I hope to create my own Android app one day!
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Never give up on yourself; take pride in what you've accomplished thus far! 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    Looking forward to seeing everyone again this Saturday! :)
+                </p>
+                <p>
+                    -The SGWC Team
+                </p>
+
+
+                </div>
+            </section> <!-- end week 4 summary -->
+
         <section id="week3" class="news bg-white">
             <div class="container">
                 <div class="headline text-center">
