added the annoucements and the meeting recap week4

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -192,7 +192,7 @@
                 <ul>
                     <h4>1. Bonus Hour</h4>
                     <p>
-                        This week's Bonus Hour will take place Thursday, 2/10 from 7:00-8:00p ET and is open to all SGWC participants. 
+                        This week's Bonus Hour will take place Thursday, 2/17 from 7:00-8:00p ET and is open to all SGWC participants. 
                         SGWC mentors will be available on Zoom during the bonus hour to resolve technical difficulties, dive deeper into the 
                         coding concepts we've learned, or talk about computer science in general!
                     </p>
@@ -210,15 +210,7 @@
                         If you would like to see it, you can find that in CodeHS under one of your assignments! 
                         The assignment button will be colored pink or dark blue. 
                     </p>
-                    <h4>3. Introduce a Girl to Engineering Day</h4>
-                    <p>
-                        Curious what STEM is all about beyond the classroom? Interested in how science, technology, engineering and 
-                        mathematics can be used to solve problems and make our world a better place? Join us for the 7th annual Introduce a 
-                        Girl to Engineering Day: Home Edition hosted by MSU's College of Engineering on <b>Saturday, 2/26 from 1:30-3:30p ET</b>! 
-                        Registration is free to 4th-8th grade students, and closes on 2/11—more information about the program can be found 
-                        at the <a href = "https://www.egr.msu.edu/wie/form/introduce-girl-engineering">registration link</a>.
-                    </p>
-                    <h4>4. Girls Who Code Summer Programs</h4>
+                    <h4>3. Girls Who Code Summer Programs</h4>
                     <p>
                         The national organization of Girls Who Code is offering <b>free</b>, virtual summer opportunities for high school students from
                         <b>June 17 - August 12</b>, and the application is <a href="https://girlswhocodesm.smapply.io/?utm_source=Domestic+Campaign+Monitor&utm_medium=Campaign+Monitor&utm_campaign=Campaign+Monitor+2022">OPEN.</a>
@@ -236,43 +228,48 @@
                         If you are interested, the application linked above only takes about 15-20 minutes to complete, and doesn't require GPA, transcripts,
                         or recommendations!
                     </p>
-                    <h4>5. Looking Ahead</h4>
+                    <h4>4. Looking Ahead</h4>
                     <p>
-                        We'll see you again this Saturday, 2/12 at 10a ET for our fourth SGWC meeting of the spring, where we will be reviewing 
-                        all that we’ve learned so far!
+                        We'll see you again this Saturday, 2/19 at 10a ET for our fifth SGWC meeting of the spring, where we will be learning about lists and tables in HTML!
                     </p>
-                    <h4>6. Questions?</h4>
+                    <h4>5. Questions?</h4>
                     <p>
                         As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
                     </p>
                 </ul>
                 <h4 class="text-center">Meeting Recap</h4>
                 <p>
-                    To start off this week, we did an icebreaker where students shared their favorite part of their week – we heard that a 
-                    lot of students had snow days over the snowstorm during the later part of the week.
-                </p>
-                <p>
-                    After our ice breaker, we went directly to our spotlight, where our students saw a preview of two different careers 
-                    in the world of computer science. Interviews with Brina, a software engineer and Polina, a data scientist, that 
-                    explored how they were introduced to the world of computer science and what they do at their current job today.
+                    To start off this week, we did an icebreaker where students drew their favorite activities, animals, and more!
+                    We got to see some awesome sketches and heard about some really fun hobbies!
                 </p>
                 <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                     <div class="row">
-                        <div class="col-md-6" align="middle">
-                            <iframe allowfullscreen width="400" height="350" src="https://www.youtube.com/embed/t0-Z_LfGwUM"></iframe>
-                        </div>
-                        <div class="col-md-6" align="middle">
-                            <iframe allowfullscreen width="400" height="350" src="https://www.youtube.com/embed/tTSEFaYjV30"></iframe>
+                        <div class="col-md-12" align="middle">
+                            <img class="shadow-lg" src="/Users/annaclark/Desktop/msu-cse-outreach.github.io/spartangwc/assets/img/ss22photos/week4/yellow_cohort_drawing.png" height="350">
                         </div>
                     </div>
                     <br>
                     <div class="row">
-                        <p><i>Watch these short videos to learn about two very different careers in computer science!</i></p>
+                        <p><i>Sketches from the Yellow Cohort</i></p>
                     </div>
                 </div>
                 <p>
-                    Once our students finished sharing their thoughts on some different computer science careers, we jumped right into a quick 
-                    review of the last two weeks of content!
+                    After our ice breaker, we went directly to our spotlight, where our students learned how biases in algorithms can affect others. 
+                    TED Talk speaker Joy Buolamwini explained how she has been working to combat this issue.
+                </p>
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-12" align="middle">
+                            <iframe allowfullscreen width="400" height="350" src="https://www.ted.com/talks/joy_buolamwini_how_i_m_fighting_bias_in_algorithms"></iframe>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <p><i>Watch this interesting TED Talk to learn more about bias in algorithms!</i></p>
+                    </div>
+                </div>
+                <p>
+                    Once our students finished sharing their thoughts on algorithm bias and how it affects our lives, we jumped right into a review of the content we have learned so far!
                 </p>
                 <p>
                     After that, we continued with the HTML lessons that our students started last week on <a href = "https://codehs.com/">CodeHS</a>, 
