fixed mentor image week4

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -314,7 +314,7 @@
                 <!-- mentor photos -->
                 <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                     <div class="row">
-                        <div class="col-md-4" align="middle">
+                        <div class="col-md-12" align="middle">
                             <img class="shadow-lg" src="/Users/annaclark/Desktop/msu-cse-outreach.github.io/spartangwc/assets/img/ss22photos/team/trinity750x1000_72R.jpg" height="350">
                             <br><br>
                             <p><i>Trinity Johnson</i></p>
@@ -322,7 +322,7 @@
                     </div>
                     <!-- mentor QA -->
                     <div class="row">
-                        <div class="col-md-4" align="left"> <!-- Sanju -->
+                        <div class="col-md-12" align="left"> <!-- Trinity -->
                             <p>
                                 <b>What are you studying?</b><br>
                                 I am a second-year majoring in computer science and minoring in Japanese!
