--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -322,7 +322,7 @@
                     </div>
                     <!-- mentor QA -->
                     <div class="row">
-                        <div class="col-md-12" align="left"> <!-- Trinity -->
+                        <div class="col-md-12" align="middle"> <!-- Trinity -->
                             <p>
                                 <b>What are you studying?</b><br>
                                 I am a second-year majoring in computer science and minoring in Japanese!
